<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">Lịch Vạn Sự</string>
	<string name="action_settings">Settings</string>
	<string name="animation_duration">300</string>
	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="solar_calendar">Dương lịch</string>
	<string name="lunar_calendar">Âm lịch</string>
	<string name="info">Chi tiết</string>
	<string name="hour">Giờ</string>
	<string name="date">Ngày</string>
	<string name="month">Tháng</string>
	<string name="year">Năm</string>
	<string name="blank"></string>

</resources>